@@ -38,6 +38,7 @@
   37. CLANWHO can now get used to get clan member information
   38. Clan Positions can now limit number of holders by percentage of membership
   39. New Clan Governments: Co-Op, Meritocracy, Plutocracy
+  40. New Diseases: Tourettes (similar to spell)
 
 # Build 5.9.7 Release 08/29/2018
    1. Scholars gain XP from visiting bookstores, and can study dissertations.
